src/test/deca/context/valid/notYetImplemented/test_pass_2_simple_decl_field.deca
// Description:
//    Program testing pass 2, only one public non class type field in a object
//
// Results:
//    ok
//
// History:
//    Created on 17/01/2025

class Test{
    int x = 3;
}
