src/test/deca/context/invalid/test_pass_2_field_type_void.deca
// Description:
//    Program testing pass 2, declare a void field
//
// Results:
//    ok
//
// History:
//    Created on 17/01/2025


class Test{
    void x;
}


